<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.BookDetailActivity">

    <TextView
            android:text="@string/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_name"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textColor="#007360"/>
    <ImageView
            android:layout_width="162dp"
            android:layout_height="189dp"
            android:id="@+id/detail_image" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" android:contentDescription="@string/book_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_name" app:srcCompat="@mipmap/no_image"/>
    <TextView
            android:text="@string/book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_price" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_name" android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/detail_image"
            android:textSize="24sp" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/book_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/detail_course" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_price" android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/detail_image"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0" android:textColor="#6c7373"/>
    <TextView
            android:layout_height="wrap_content"
            android:id="@+id/detail_isbn" android:text="@string/isbn"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/detail_course"
            android:layout_marginStart="28dp" app:layout_constraintStart_toEndOf="@+id/detail_image"
            android:textSize="14sp"
            android:textColor="#6c7373" android:layout_width="0dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <!--<TextView-->
            <!--android:text="@string/book_available"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/detail_until" android:layout_marginTop="16dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/detail_isbn" android:layout_marginStart="28dp"-->
            <!--app:layout_constraintStart_toEndOf="@+id/detail_image"-->
            <!--android:textSize="14sp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="77dp"-->
            <!--app:layout_constraintHorizontal_bias="0.04"/>-->
    <TextView
            android:text="@string/seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_seller_info" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_image" android:textSize="24sp"/>
    <ImageView
            android:src="@android:drawable/sym_def_app_icon"
            android:layout_width="142dp"
            android:layout_height="138dp"
            android:id="@+id/detail_seller_icon" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_seller_info" android:contentDescription="@string/seller"
            app:srcCompat="@mipmap/no_image"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_seller_name"
            android:text="@string/seller_name" android:layout_marginStart="48dp"
            app:layout_constraintStart_toEndOf="@+id/detail_seller_icon" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_seller_info" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="145dp" app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp"/>
    <Button
            android:text="@string/detail_mark"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/mark_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_seller_icon" android:textSize="18sp"
            android:visibility="invisible"/>
    <Button
            android:text="@string/detail_request"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/request_button" android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/mark_button"
            app:layout_constraintTop_toBottomOf="@+id/detail_seller_icon" android:layout_marginTop="36dp"
            android:textSize="18sp"
            android:background="@drawable/button"
            android:textColor="@android:color/white"/>

    <ImageView
            android:src="@android:drawable/ic_menu_revert"
            android:layout_width="43dp"
            android:layout_height="35dp"
            android:id="@+id/return_button" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/back"/>
    <TextView
            android:text="@string/message_to_buyer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/detail_image" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_isbn" android:id="@+id/detail_msg"
            android:textColor="#6c7373" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
</android.support.constraint.ConstraintLayout>