<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.EditProfile">
    <ImageView
            android:layout_width="180dp"
            android:layout_height="163dp" app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/userphoto"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:contentDescription="@string/book_name"/>
    <EditText
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/bookname" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/user_name"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/book_name"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/userphoto"
            app:layout_constraintHorizontal_bias="0.513"/>
    <Spinner
            android:layout_width="320dp"
            android:layout_height="43dp"
            android:id="@+id/grade" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.506"
            android:spinnerMode="dropdown" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/bookname"/>
    <TextView
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/email" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/grade" android:hint="@string/user_email_address"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/book_name" app:layout_constraintHorizontal_bias="0.513"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/email"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513" android:hint="@string/phone_number"/>
    <Spinner
            android:layout_width="320dp"
            android:layout_height="43dp"
            android:id="@+id/major" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintHorizontal_bias="0.52" android:spinnerMode="dropdown"/>
    <Button
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:id="@+id/back" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="200dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/major"
            android:text="@string/back"/>
    <Button
            android:text="@string/save"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:id="@+id/save" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="208dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/major"/>

</android.support.constraint.ConstraintLayout>