<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SellBookActivity">

    <EditText
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/coursecode" android:layout_marginTop="24dp"
            android:maxLength="100"
            app:layout_constraintTop_toBottomOf="@+id/message"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/coursecode" android:textSize="12sp"/>
    <ImageView
            android:layout_width="180dp"
            android:layout_height="163dp" app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/userimage"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:contentDescription="@string/book_name"/>
    <EditText
            android:layout_width="319dp"
            android:layout_height="47dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/bookname" android:layout_marginStart="8dp"
            android:maxLength="100"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/userimage" android:hint="@string/book_name"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/book_name"/>
    <EditText
            android:layout_width="319dp"
            android:layout_height="47dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/isbn"
            android:maxLength="100"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/bookname"
            android:hint="@string/isbn"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="@string/isbn"/>
    <EditText
            android:layout_width="319dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/price"
            android:hint="@string/book_price"
            android:autofillHints="@string/book_price"
            android:layout_marginTop="24dp"
            android:maxLength="4"
            app:layout_constraintTop_toBottomOf="@+id/isbn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/message" android:layout_marginTop="24dp"
            android:maxLength="100"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/message_to_buyer" android:textSize="12sp"/>
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:ems="10"-->
    <!--android:id="@+id/date"-->
    <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"-->
    <!--android:hint="@string/available_date"-->
    <!--android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/message"-->
    <!--android:text="Available time"-->
    <!--android:fontFamily="sans-serif" android:typeface="normal" android:textSize="18sp" android:textStyle="bold"-->
    <!--android:textColor="@color/colorAccent"/>-->
    <!--<Spinner-->
    <!--android:layout_width="319dp"-->
    <!--android:layout_height="24dp"-->
    <!--android:id="@+id/subject" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="20dp"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/date" app:layout_constraintHorizontal_bias="0.473"-->
    <!--android:spinnerMode="dropdown"/>-->
    <!--<Spinner-->
    <!--android:layout_width="319dp"-->
    <!--android:layout_height="24dp"-->
    <!--android:id="@+id/course" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="20dp"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/subject" app:layout_constraintHorizontal_bias="0.473"/>-->
    <Button
            android:text="@string/book_publish"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:id="@+id/publish" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="112dp" app:layout_constraintTop_toBottomOf="@+id/message"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/cancel"/>
    <Button
            android:text="@string/publish_cancel"
            android:layout_width="194dp"
            android:layout_height="47dp"
            android:id="@+id/cancel" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginTop="112dp" app:layout_constraintTop_toBottomOf="@+id/message"
            app:layout_constraintStart_toEndOf="@+id/publish" app:layout_constraintHorizontal_bias="0.5"/>
</android.support.constraint.ConstraintLayout>