<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <ImageView
            android:layout_width="155dp"
            android:layout_height="166dp" app:srcCompat="@mipmap/no_image"
            android:id="@+id/book_cover" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/book_name"
            android:layout_marginTop="4dp"
    />
    <TextView
            android:text="@string/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/book_name" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/book_cover" android:textSize="18sp"
            android:textColor="#007360"/>
    <TextView
            android:text="@string/book_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/book_price" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/book_name" android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/book_cover" android:textSize="18sp"
            android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/book_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/book_class" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/book_price" android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/book_cover" android:textSize="18sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textColor="#6c7373"/>
    <!--<TextView-->
            <!--android:text="@string/book_available"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/book_until" android:layout_marginTop="16dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/book_class"-->
            <!--app:layout_constraintStart_toEndOf="@+id/book_cover" android:layout_marginStart="32dp"-->
            <!--android:textSize="18sp"/>-->
</android.support.constraint.ConstraintLayout>